[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy-cleaned"
version = "0.1.3"
description = "Fixed pip installation bugs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

authors = [
  { name = "Dhruvaditya Yellapu" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]


